# InfoHub-Chatbot-LangChain

./: .gitignore  CLAUDE.md  README.md  README_Developer.md  README_INGEST_CHUNKING.md  package.json  pyproject.toml
.claude/: settings.local.json
DevOps/Local/: docker-all-down.sh  docker-all-status.sh  docker-all-up.sh
DevOps/Local/Postgres/: docker-compose.yaml
DevOps/Local/Redis/: docker-compose.yml
Portals/infohub-app/: README.md  angular.json  package-lock.json  package.json
Portals/infohub-app/src/: index.html  styles.css
app/: config.json  data_engineering_status.template.json  main.py
app/Api/: __init__.py  api_app.py
app/Api/db/: __init__.py  sqlite_db.py
app/Api/repositories/: __init__.py  execution_repository.py
app/Api/routers/: __init__.py  administration.py  chat.py  datalake.py  executions.py  health.py  ingest.py  model_build.py  workflows.py
app/Api/schemas/: __init__.py  datalake_schemas.py  execution_schemas.py  workflow_schemas.py
app/Api/services/: __init__.py  execution_service.py  workflow_config_service.py
app/Core/db/: migration_manager.py  postgres_provider.py  provider_factory.py  sqlite_provider.py
app/Core/interfaces/: db_interface.py  (+1 more)
app/common/: app_constants.py  logging_config.py
app/workflows/: workflow_task_loader.py  workflow_tasks.json
scripts/: local-env.ps1  local-env.sh  start-api-ui-docker.ps1  start-api-ui-docker.sh  start-api-ui.ps1  start-api-ui.sh  start-api.ps1  start-api.sh  start-ui.ps1  start-ui.sh  stop-api-ui-docker.ps1  stop-api-ui-docker.sh  stop-api-ui.ps1  stop-api-ui.sh
(+94 files in other folders)
